vlib/v/checker/tests/orm_using_non_struct_field_in_order_by_error.vv
module main

import db.sqlite

struct User {
	id       int @[primary; sql: serial]
	username string
}

fn main() {
	db := sqlite.connect(':memory:') or { panic(err) }

	users := sql db {
		select from User order by database
	}!

	println(users)
}
